# PixelVault

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  benchmark.py  benchmark_ecc.py  benchmark_jellyfish.py  calibrate.py  main.py  pyproject.toml  requirements.txt  test_comprehensive.py  test_roundtrip.py  test_youtube_roundtrip.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
bytevault/: __init__.py  audio.py  decoder.py  downloader.py  ecc.py  encoder.py  palette.py  uploader.py  vault.py  youtube.py
pixelvault/: __init__.py  __main__.py  _cli.py  audio.py  decoder.py  ecc.py  encoder.py  palette.py  vault.py  youtube.py
scripts/: benchmark.py  benchmark_jellyfish.py  benchmark_report.py  calibrate.py
tests/: test_comprehensive.py  test_roundtrip.py  test_smoke.py  test_youtube_roundtrip.py
