[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pixelvault"
version = "1.0.0"
description = "Encode any file into a YouTube video and recover it losslessly."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Sahil Menon", email = "sahilmenon01@gmail.com" }]
keywords = ["youtube", "video", "encoding", "storage", "steganography", "ecc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: System :: Archiving",
]
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "tqdm>=4.65",
    "reedsolo>=1.7",
    "cryptography>=41.0",
    "yt-dlp>=2024.1.1",
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.1",
    "google-auth-httplib2>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
pixelvault = "pixelvault._cli:main"

[project.urls]
Homepage = "https://github.com/sahilmenon01/pixelvault"
Repository = "https://github.com/sahilmenon01/pixelvault"
"Bug Tracker" = "https://github.com/sahilmenon01/pixelvault/issues"

[tool.setuptools.packages.find]
include = ["pixelvault*"]

[tool.setuptools.package-data]
pixelvault = ["py.typed"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = [
    "E501",   # line too long — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]   # assert is fine in tests

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true   # many deps lack stubs
